--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.21",
     "react-map-gl": "^5.2.7",
     "react-mapbox-gl": "^4.8.6",
     "react-redux": "^7.2.1",
