--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,15 @@
       "bcryptjs": "^2.4.3",
       "colors": "^1.4.0",
       "cookie-parser": "^1.4.5",
+      "cookie-session": "^1.4.0",
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "express-list-endpoints": "^5.0.0",
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^5.9.25",
+      "passport": "^0.4.1",
+      "passport-google-oauth20": "^2.0.0",
       "volleyball": "^1.5.1"
    },
    "devDependencies": {
