--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
    "description": "4th sem Project using node and react",
    "main": "index.js",
    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "server": "nodemon server.js"
+      "server": "nodemon server.js ",
+      "start": "node server.js",
+      "install-client": "cd client && npm install",
+      "build": "cd client && npm run build",
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client && npm run build --prefix client"
    },
    "keywords": [
       "node",
