--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
       "cookie-parser": "^1.4.5",
       "cookie-session": "^1.4.0",
       "cors": "^2.8.5",
+      "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "express-list-endpoints": "^5.0.0",
       "jsonwebtoken": "^8.5.1",
