--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "express-list-endpoints": "^5.0.0",
+      "http-proxy": "^1.18.1",
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^5.9.25",
       "passport": "^0.4.1",
