--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
    "name": "client",
    "version": "0.1.0",
    "private": true,
-   "proxy":"http://localhost:8000",
+   "proxy": "http://localhost:8000",
    "dependencies": {
       "@testing-library/jest-dom": "^4.2.4",
       "@testing-library/react": "^9.5.0",
@@ -12,6 +12,7 @@
       "js-cookie": "^2.2.1",
       "node-sass": "^4.14.1",
       "react": "^16.13.1",
+      "react-alice-carousel": "^1.19.3",
       "react-dom": "^16.13.1",
       "react-google-login": "^5.1.21",
       "react-map-gl": "^5.2.7",
@@ -19,7 +20,6 @@
       "react-redux": "^7.2.1",
       "react-router-dom": "^5.2.0",
       "react-scripts": "3.4.1",
-      "react-slick": "^0.27.1",
       "react-stepper-horizontal": "^1.0.11",
       "react-toastify": "^6.0.8",
       "redux": "^4.0.5",
