--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
       "react-google-login": "^5.1.21",
       "react-map-gl": "^5.2.7",
       "react-mapbox-gl": "^4.8.6",
+      "react-rating": "^2.0.5",
       "react-redux": "^7.2.1",
       "react-router-dom": "^5.2.0",
       "react-scripts": "3.4.1",
