--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
       "express-rate-limit": "^5.1.3",
       "helmet": "^4.0.0",
       "hpp": "^0.2.3",
+      "http-proxy-middleware": "^1.0.5",
       "jsonwebtoken": "^8.5.1",
       "mongoose": "^5.9.25",
       "passport": "^0.4.1",
