--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "mongoose": "^5.9.25",
       "passport": "^0.4.1",
       "passport-google-oauth20": "^2.0.0",
+      "react-accessible-accordion": "^3.3.3",
       "react-spinners": "^0.9.0",
       "volleyball": "^1.5.1",
       "xss-clean": "^0.1.1"
