--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
       "node-sass": "^4.14.1",
       "react": "^16.13.1",
       "react-alice-carousel": "^1.19.3",
+      "react-collapsible": "^2.8.0",
       "react-dom": "^16.13.1",
       "react-google-login": "^5.1.21",
       "react-map-gl": "^5.2.7",
@@ -19,7 +20,7 @@
       "react-rating": "^2.0.5",
       "react-redux": "^7.2.1",
       "react-router-dom": "^5.2.0",
-      "react-scripts": "3.4.1",
+      "react-scripts": "^3.4.2",
       "react-stepper-horizontal": "^1.0.11",
       "react-toastify": "^6.0.8",
       "redux": "^4.0.5",
