--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
       "passport": "^0.4.1",
       "passport-google-oauth20": "^2.0.0",
       "react-accessible-accordion": "^3.3.3",
+      "react-multi-carousel": "^2.5.5",
       "react-spinners": "^0.9.0",
       "volleyball": "^1.5.1",
       "xss-clean": "^0.1.1"
