--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
       "passport-google-oauth20": "^2.0.0",
       "react-accessible-accordion": "^3.3.3",
       "react-multi-carousel": "^2.5.5",
+      "react-promise-tracker": "^2.1.0",
       "react-spinners": "^0.9.0",
       "volleyball": "^1.5.1",
       "xss-clean": "^0.1.1"
