--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
    "version": "1.0.0",
    "description": "4th sem Project using node and react",
    "main": "index.js",
+   "engines": {
+      "npm": "6.14.7",
+      "node": "14.5.0"
+   },
    "scripts": {
       "server": "nodemon server.js ",
       "start": "node server.js",
