--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
       "react-collapsible": "^2.8.0",
       "react-dom": "^16.13.1",
       "react-google-login": "^5.1.21",
+      "react-horizontal-scrolling-menu": "^0.7.7",
       "react-map-gl": "^5.2.7",
       "react-mapbox-gl": "^4.8.6",
       "react-rating": "^2.0.5",
