--- a/package.json
+++ b/package.json
@@ -37,11 +37,13 @@
       "hpp": "^0.2.3",
       "http-proxy-middleware": "^1.0.5",
       "jsonwebtoken": "^8.5.1",
+      "moment": "^2.27.0",
       "mongoose": "^5.9.25",
       "passport": "^0.4.1",
       "passport-google-oauth20": "^2.0.0",
       "react-accessible-accordion": "^3.3.3",
       "react-multi-carousel": "^2.5.5",
+      "react-persist": "^1.0.2",
       "react-promise-tracker": "^2.1.0",
       "react-spinners": "^0.9.0",
       "volleyball": "^1.5.1",
