--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "start": "node server.js",
       "install-client": "cd client && npm install",
       "build": "cd client && npm run build",
-      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client && \"set \"INLINE_RUNTIME_CHUNK=false\" && npm run build --prefix client"
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false  npm install --prefix client && set \"INLINE_RUNTIME_CHUNK=false\" && npm run build --prefix client"
    },
    "keywords": [
       "node",
