--- a/config/config.env
+++ b/config/config.env
@@ -5,3 +5,6 @@ JWT_SECRET =jujudhaukopaisa200rs
 JWT_EXPIRE = 30d
 GOOGLE_CLIENT_ID = 796317557299-6qekcgm9mdudfudt0accng26ngpv6jic.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET =IDabZQzAsII3Ki9jQed9QZ40
+
+PRODUCT_UPLOAD_PATH= ./public/products
+MAX_FILE_UPLOAD= 1000000
