--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "cors": "^2.8.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
+      "express-fileupload": "^1.2.0",
       "express-list-endpoints": "^5.0.0",
       "express-mongo-sanitize": "^2.0.0",
       "express-rate-limit": "^5.1.3",
