Added user profile

--- a/config/config.env
+++ b/config/config.env
@@ -8,3 +8,9 @@ GOOGLE_CLIENT_SECRET =IDabZQzAsII3Ki9jQed9QZ40
 
 PRODUCT_UPLOAD_PATH= ./public/products
 MAX_FILE_UPLOAD= 1000000
+
+CLOUDINARY_API_KEY = 967647398996233
+CLOUDINARY_API_SECRET  = Xm9J5RUV326Jg3oSQ0kmEVHx8dE
+CLOUDINARY_NAME = dc6u4purx
+
+CLOUDINARY_URL=cloudinary://967647398996233:Xm9J5RUV326Jg3oSQ0kmEVHx8dE@dc6u4purx
