--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
       "@testing-library/user-event": "^7.2.1",
       "axios": "^0.19.2",
       "dotenv": "^8.2.0",
+      "moment": "^2.28.0",
       "node-sass": "^4.14.1",
       "react": "^16.13.1",
       "react-alice-carousel": "^1.19.3",
@@ -23,6 +24,7 @@
       "react-router-dom": "^5.2.0",
       "react-scripts": "^3.4.2",
       "react-stepper-horizontal": "^1.0.11",
+      "react-tabs": "^3.1.1",
       "react-toastify": "^6.0.8",
       "redux": "^4.0.5",
       "redux-devtools-extension": "^2.13.8",
