--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
    "license": "MIT",
    "dependencies": {
       "bcryptjs": "^2.4.3",
+      "cloudinary": "^1.23.0",
       "colors": "^1.4.0",
       "cookie-session": "^1.4.0",
       "cors": "^2.8.5",
@@ -38,7 +39,6 @@
       "hpp": "^0.2.3",
       "http-proxy-middleware": "^1.0.5",
       "jsonwebtoken": "^8.5.1",
-      "moment": "^2.27.0",
       "mongoose": "^5.9.25",
       "passport": "^0.4.1",
       "passport-google-oauth20": "^2.0.0",
